--- a/home.css
+++ b/home.css
@@ -11,7 +11,7 @@
     margin-top: 15px;
     z-index: 1;
     max-width: 100%;
-    height: 90vh;
+    height: auto;
     margin-bottom: 50px;
 }
 
